--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,17 @@ repositories {
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.5.RELEASE'
+    compile group: 'io.cucumber', name: 'cucumber-java', version: '4.7.4'
+    compile group: 'io.cucumber', name: 'cucumber-spring', version: '4.7.4'
 
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.5.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'io.cucumber', name: 'cucumber-junit', version: '4.7.4'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.5.RELEASE'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
 
 bootJar {
     manifest {
-        attributes 'Start-Class': 'com.thetestroom.WebApplicationRunner'
+        attributes 'Start-Class': 'com.thetestroom.ApplicationRunner'
     }
 }
